force-app/main/default/objects/Bank_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Bank Account Number</description>
    <inlineHelpText>May have spaces or dashes to group the numbers</inlineHelpText>
    <label>Account #</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>