force-app/main/default/objects/Bank_Account__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank #</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>