force-app/main/default/objects/Bank_Account__c/fields/Full_Display__c.field-meta.xml
<CustomField>
    <fullName>Full_Display__c</fullName>
    <formula>Name + &quot; - &quot; + IF(Validated__c, &quot;&lt;span class=\&quot;color-text-success\&quot;&gt;Validated&lt;/span&gt;&quot;, &quot;&lt;span class=\&quot;color-text-destructive\&quot;&gt;NOT VALIDATED&lt;/span&gt;&quot; )+
&quot;&lt;br&gt;&quot; &amp; Bank_Name__c &amp;
&quot;&lt;br&gt;&quot; &amp; Bank__c &amp;
&quot;&lt;br&gt;&quot; &amp; Transit__c &amp;
&quot;&lt;br&gt;&quot; &amp; Account__c</formula>
    <label>Full Display</label>
    <type>Text</type>
</CustomField>