force-app/main/default/objects/Bank_Account__c/fields/Is_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Account__c</fullName>
    <formula>Id = Client__r.Primary_Bank_Account__c</formula>
    <label>Is Primary Account</label>
    <type>Checkbox</type>
</CustomField>