force-app/main/default/objects/Bank_Account__c/fields/Mark_as_Primary__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set, marks as primary bank account on the Client Account before resetting to false.</description>
    <label>Mark as Primary</label>
    <type>Checkbox</type>
</CustomField>