force-app/main/default/objects/Bank_Account__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this bank account belong to a 3rd party?</inlineHelpText>
    <label>Third Party</label>
    <type>Checkbox</type>
</CustomField>