force-app/main/default/objects/Bank_Account__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <description>The transaction routing number of the
payor/payee’s financial institution</description>
    <label>Transit #</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>