force-app/main/default/objects/Bank_Account__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>