force-app/main/default/objects/Bank_Account__c/validationRules/Account_Only_Number_and_Separators.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Only_Number_and_Separators</fullName>
    <active>true</active>
    <description>Tests if Account Number only contains Numbers, Spaces, or Hyphens.</description>
    <errorConditionFormula>IF( REGEX(Account__c, &quot;^[0-9 -]*$&quot;), FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>The Account Number can only contain numbers, spaces, and hyphens.</errorMessage>
</ValidationRule>