force-app/main/default/objects/Bank_Account__c/validationRules/Bank_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Number_Format</fullName>
    <active>true</active>
    <description>Bank Numbers must start with a 0 and contain 4 digits</description>
    <errorConditionFormula>IF( REGEX(Bank__c, &quot;^[0]{1}[0-9]{3}$&quot;), FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>Bank__c</errorDisplayField>
    <errorMessage>Bank Numbers must start with a 0 and contain 4 digits</errorMessage>
</ValidationRule>