force-app/main/default/objects/Bank_Account__c/validationRules/Transit_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Transit_Number_Format</fullName>
    <active>true</active>
    <description>Transit Numbers must contain 5 numeric digits</description>
    <errorConditionFormula>IF( REGEX(Transit__c, &quot;^[0-9]{5}$&quot;), FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>Transit__c</errorDisplayField>
    <errorMessage>Transit Numbers must contain 5 numeric digits</errorMessage>
</ValidationRule>